--- a/Student Bio.html
+++ b/Student Bio.html
@@ -2,7 +2,7 @@
 
     <head>
     <title>Student Bio</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="lgulartem.github.io/style.css">
     </head>
 
         <body>
